[package]
name = "parking_lot_mpsc"
version = "0.1.5"
authors = ["Stephen Oliver <steve@infincia.com>"]
description = "A port of the Rust std::sync::mpsc module, using the parking_lot concurrency types rather than those in the standard library."
license = "Apache-2.0/MIT"
readme = "README.md"
documentation = "https://docs.rs/parking_lot_mpsc"
homepage = "https://github.com/infincia/parking_lot_mpsc"
repository = "https://github.com/infincia/parking_lot_mpsc"

[badges]
travis-ci = { repository = "infincia/parking_lot_mpsc" }

[dependencies]
parking_lot = "0.4.0"
